[package]
name = "redis-server-wrapper"
version = "0.1.0"
edition = "2024"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "Type-safe wrapper for redis-server and redis-cli with builder pattern APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/redis-server-wrapper"
documentation = "https://docs.rs/redis-server-wrapper"
homepage = "https://github.com/joshrotenberg/redis-server-wrapper"
keywords = ["redis", "testing", "wrapper", "server"]
categories = ["development-tools::testing", "database"]
rust-version = "1.87"
